--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ allprojects {
         jcenter()
         
     }
+
+    ext {
+        appcompat = '1.1.0-alpha01'
+    }
 }
 
 task clean(type: Delete) {
