--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,10 @@ buildscript {
     repositories {
         google()
         jcenter()
-
-
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,11 +18,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
-
     ext {
         appcompat = '1.1.0-alpha01'
+        retrofit_version = '2.3.0'
     }
 }
 
