--- a/swipedrag/build.gradle
+++ b/swipedrag/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.appsfeature'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
 
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -29,6 +29,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation "androidx.recyclerview:recyclerview:$rootProject.ext.recyclerview"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.ext.retrofit_version"
 }
