--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ allprojects {
     }
     ext {
         recyclerview = '1.1.0'
-        appcompat = '1.1.0-alpha01'
-        retrofit_version = '2.3.0'
+        appcompat = '1.3.0'
+        retrofit_version = '2.9.0'
     }
 }
 
